feat: add database cleanup script with TypeScript support
- Create clear-database-data.ts script for data cleanup
- Add npm script for database clearing
- Preserve admin user during cleanup
- Convert JavaScript scripts to TypeScript for better maintainability

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "db:seed:undo": "sequelize-cli db:seed:undo:all",
     "db:reset": "sequelize-cli db:drop && sequelize-cli db:create && sequelize-cli db:migrate",
     "db:fresh": "sequelize-cli db:drop && sequelize-cli db:create && sequelize-cli db:migrate && sequelize-cli db:seed:all",
+    "db:clear": "ts-node clear-database-data.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
