--- a/src/swagger/schemas/doctors.yaml
+++ b/src/swagger/schemas/doctors.yaml
@@ -8,7 +8,7 @@ components:
         email:
           type: string
           format: email
-          example: dr.smith@hospital.com
+          example: michael.johnson@hospital.com
           description: Doctor's email address
         password:
           type: string
@@ -17,7 +17,7 @@ components:
           description: Doctor's password
         fullName:
           type: string
-          example: Dr. John Smith
+          example: Dr. Michael Johnson
           description: Doctor's full name
         phone:
           type: string
@@ -33,7 +33,7 @@ components:
           description: Doctor's medical specialization
         hospitalName:
           type: string
-          example: Kigali University Teaching Hospital
+          example: City General Hospital
           description: Hospital where doctor works
 
     DoctorProfile:
@@ -50,10 +50,10 @@ components:
         email:
           type: string
           format: email
-          example: dr.smith@hospital.com
+          example: michael.johnson@hospital.com
         fullName:
           type: string
-          example: Dr. John Smith
+          example: Dr. Michael Johnson
         licenseNumber:
           type: string
           example: MD-RW-2024-001
@@ -62,7 +62,7 @@ components:
           example: General Medicine
         hospitalName:
           type: string
-          example: Kigali University Teaching Hospital
+          example: City General Hospital
         isVerified:
           type: boolean
           example: true
@@ -164,3 +164,82 @@ components:
           example: Doctor profile updated successfully
         data:
           $ref: "#/components/schemas/DoctorProfile"
+
+    DoctorRegistrationErrorResponse:
+      type: object
+      properties:
+        success:
+          type: boolean
+          example: false
+        error:
+          type: object
+          properties:
+            message:
+              type: string
+              example: This license number already exists. Please use a different license number.
+            statusCode:
+              type: integer
+              example: 409
+            field:
+              type: string
+              example: licenseNumber
+            code:
+              type: string
+              example: LICENSE_NUMBER_EXISTS
+              enum:
+                [
+                  LICENSE_NUMBER_EXISTS,
+                  EMAIL_EXISTS,
+                  DUPLICATE_RECORD,
+                  VALIDATION_ERROR,
+                  INTERNAL_ERROR,
+                ]
+
+    DoctorValidationErrorResponse:
+      type: object
+      properties:
+        success:
+          type: boolean
+          example: false
+        error:
+          type: object
+          properties:
+            message:
+              type: string
+              example: Validation failed. Please check your input data.
+            statusCode:
+              type: integer
+              example: 400
+            code:
+              type: string
+              example: VALIDATION_ERROR
+            details:
+              type: array
+              items:
+                type: object
+                properties:
+                  field:
+                    type: string
+                    example: email
+                  message:
+                    type: string
+                    example: Please provide a valid email address
+
+    DoctorInternalErrorResponse:
+      type: object
+      properties:
+        success:
+          type: boolean
+          example: false
+        error:
+          type: object
+          properties:
+            message:
+              type: string
+              example: Doctor registration failed. Please try again later.
+            statusCode:
+              type: integer
+              example: 500
+            code:
+              type: string
+              example: INTERNAL_ERROR
